# GameOfLife

./: CMakeLists.txt
.cache/clangd/index/: game.cpp.AB047FF04BA48E58.idx  game.hpp.286BF6E206FC95E7.idx  header.hpp.6A1ACCDD944C3E68.idx  input.cpp.37E99EE7C4B8B7A3.idx  input.hpp.51DB9FCE05DF61D4.idx  main.cpp.EDA3C012FED6266E.idx  render.cpp.40804AEA9018DC61.idx  render.hpp.6DBB461E7FBEC724.idx  utils.cpp.0E76D9EE130B9050.idx  utils.hpp.8F6CC84AB3F2996C.idx
include/: game.hpp  header.hpp  input.hpp  render.hpp  types.hpp  utils.hpp
src/: game.cpp  input.cpp  main.cpp  render.cpp  utils.cpp
